feat: metrics and logout
